--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -10,12 +10,12 @@
 
 @media screen and (max-width: 768px) {
   .places__place {
-    margin-top: 73px;;
+    margin-top: 73px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places__place {
-    margin-top: 50px;;
+    margin-top: 50px;
   }
 }
