--- a/pages/index.css
+++ b/pages/index.css
@@ -18,22 +18,22 @@
 @import url('../blocks/intro/__title/intro__title.css');
 @import url('../blocks/intro/__text/intro__text.css');
 @import url('../blocks/intro/__list/intro__list.css');
-@import url('../blocks/intro/__list/_unbold/intro__list_unbold.css');
+@import url('../blocks/intro/__numbers/intro__numbers.css');
 
 @import url('../blocks/photo-grid/photo-grid.css');
 @import url('../blocks/photo-grid/__photo-grid__item/photo-grid__item.css');
 
 @import url('../blocks/places/places.css');
-@import url('../blocks/places/__place/places__place.css');
-@import url('../blocks/places/__heading/place__heading.css');
-@import url('../blocks/places/__title/place__title.css');
-@import url('../blocks/places/__website/place__website.css');
-@import url('../blocks/places/__url-heading/place__url-heading.css');
-@import url('../blocks/places/__link/place__link.css');
-@import url('../blocks/places/__content/place__content.css');
-@import url('../blocks/places/__image/place__image.css');
-@import url('../blocks/places/__text/place__text.css');
-@import url('../blocks/places/__paragraph/place__paragraph.css');
+@import url('../blocks/place/place.css');
+@import url('../blocks/place/__heading/place__heading.css');
+@import url('../blocks/place/__title/place__title.css');
+@import url('../blocks/place/__website/place__website.css');
+@import url('../blocks/place/__url-heading/place__url-heading.css');
+@import url('../blocks/place/__link/place__link.css');
+@import url('../blocks/place/__content/place__content.css');
+@import url('../blocks/place/__image/place__image.css');
+@import url('../blocks/place/__text/place__text.css');
+@import url('../blocks/place/__paragraph/place__paragraph.css');
 
 @import url('../blocks/cover/cover.css');
 @import url('../blocks/cover/__overplay/cover__overplay.css');
