--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -19,14 +19,7 @@
 
 @media screen and (max-width: 680px) {
   .place__image {
-    margin: 0 16px;
-    max-width: 320px;
-    max-height: 320px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .place__image {
-    margin: 0;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
